parser.output
State 21 conflicts: 1 shift/reduce
State 24 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: expr

    2 expr: MINUS_T expr
    3     | NUM_T
    4     | STRING_T
    5     | NIL_T
    6     | lvalue
    7     | expr TIMES_T expr
    8     | expr DIV_T expr
    9     | expr PLUS_T expr
   10     | expr MINUS_T expr
   11     | expr OR_T expr
   12     | expr AND_T expr
   13     | expr EQ_T expr
   14     | expr LT_T expr
   15     | expr LE_T expr
   16     | expr GT_T expr
   17     | expr GE_T expr
   18     | expr NEQ_T expr
   19     | lvalue ASSIGN_T expr
   20     | ID_T '(' exprlist ')'
   21     | ID_T '(' ')'
   22     | '(' exprseq ')'
   23     | '(' ')'
   24     | ID_T '{' fieldlist '}'
   25     | ID_T '{' '}'
   26     | ID_T '[' expr ']' OF_T expr
   27     | IF_T expr THEN_T expr
   28     | IF_T expr THEN_T expr ELSE_T expr
   29     | WHILE_T expr DO_T expr
   30     | FOR_T ID_T ASSIGN_T expr TO_T expr DO_T expr
   31     | BREAK_T
   32     | LET_T declarationlist IN_T END_T
   33     | LET_T declarationlist IN_T exprseq END_T

   34 lvalue: lvalue '[' expr ']'
   35       | lvalue DOT_T ID_T
   36       | ID_T
   37       | ID_T '[' expr ']'

   38 exprlist: expr
   39         | expr ',' exprlist

   40 exprseq: expr
   41        | expr ';' exprseq

   42 fieldlist: ID_T EQ_T expr
   43          | ID_T EQ_T expr ',' fieldlist

   44 declarationlist: declaration
   45                | declaration declarationlist

   46 declaration: typedeclist
   47            | variabledeclaration
   48            | functiondeclist

   49 typedeclist: typedeclaration
   50            | typedeclaration typedeclist

   51 typedeclaration: TYPE_T ID_T EQ_T type

   52 type: ID_T
   53     | '{' typefields '}'
   54     | '{' '}'
   55     | ARRAY_T OF_T ID_T

   56 typefields: ID_T COLON_T ID_T
   57           | ID_T COLON_T ID_T ',' typefields

   58 variabledeclaration: VAR_T ID_T ASSIGN_T expr
   59                    | VAR_T ID_T COLON_T ID_T ASSIGN_T expr

   60 functiondeclist: functiondeclaration
   61                | functiondeclaration functiondeclist

   62 functiondeclaration: FUNC_T ID_T '(' ')' EQ_T expr
   63                    | FUNC_T ID_T '(' typefields ')' EQ_T expr
   64                    | FUNC_T ID_T '(' ')' COLON_T ID_T EQ_T expr
   65                    | FUNC_T ID_T '(' typefields ')' COLON_T ID_T EQ_T expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 20 21 22 23 62 63 64 65
')' (41) 20 21 22 23 62 63 64 65
',' (44) 39 43 57
';' (59) 41
'[' (91) 26 34 37
']' (93) 26 34 37
'{' (123) 24 25 53 54
'}' (125) 24 25 53 54
error (256)
VAR_T (258) 58 59
TYPE_T (259) 51
FUNC_T (260) 62 63 64 65
LET_T (261) 32 33
IN_T (262) 32 33
END_T (263) 32 33
IF_T (264) 27 28
ELSE_T (265) 28
THEN_T (266) 27 28
WHILE_T (267) 29
FOR_T (268) 30
DO_T (269) 29 30
BREAK_T (270) 31
NIL_T (271) 5
ARRAY_T (272) 55
DOT_T (273) 35
AND_T (274) 12
OR_T (275) 11
EQ_T (276) 13 42 43 51 62 63 64 65
GT_T (277) 16
GE_T (278) 17
LT_T (279) 14
LE_T (280) 15
NEQ_T (281) 18
DIV_T (282) 8
OF_T (283) 26 55
ASSIGN_T (284) 19 30 58 59
PLUS_T (285) 9
MINUS_T (286) 2 10
TIMES_T (287) 7
TO_T (288) 30
COLON_T (289) 56 57 59 64 65
NUM_T (290) 3
ID_T (291) 20 21 24 25 26 30 35 36 37 42 43 51 52 55 56 57 58 59 62
    63 64 65
STRING_T (292) 4


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
expr (48)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31 32 33, on right: 1 2 7 8 9 10 11 12
    13 14 15 16 17 18 19 26 27 28 29 30 34 37 38 39 40 41 42 43 58
    59 62 63 64 65
lvalue (49)
    on left: 34 35 36 37, on right: 6 19 34 35
exprlist (50)
    on left: 38 39, on right: 20 39
exprseq (51)
    on left: 40 41, on right: 22 33 41
fieldlist (52)
    on left: 42 43, on right: 24 43
declarationlist (53)
    on left: 44 45, on right: 32 33 45
declaration (54)
    on left: 46 47 48, on right: 44 45
typedeclist (55)
    on left: 49 50, on right: 46 50
typedeclaration (56)
    on left: 51, on right: 49 50
type (57)
    on left: 52 53 54 55, on right: 51
typefields (58)
    on left: 56 57, on right: 53 57 63 65
variabledeclaration (59)
    on left: 58 59, on right: 47
functiondeclist (60)
    on left: 60 61, on right: 48 61
functiondeclaration (61)
    on left: 62 63 64 65, on right: 60 61


State 0

    0 $accept: . program $end

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    program  go to state 12
    expr     go to state 13
    lvalue   go to state 14


State 1

   32 expr: LET_T . declarationlist IN_T END_T
   33     | LET_T . declarationlist IN_T exprseq END_T

    VAR_T   shift, and go to state 15
    TYPE_T  shift, and go to state 16
    FUNC_T  shift, and go to state 17

    declarationlist      go to state 18
    declaration          go to state 19
    typedeclist          go to state 20
    typedeclaration      go to state 21
    variabledeclaration  go to state 22
    functiondeclist      go to state 23
    functiondeclaration  go to state 24


State 2

   27 expr: IF_T . expr THEN_T expr
   28     | IF_T . expr THEN_T expr ELSE_T expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 25
    lvalue  go to state 14


State 3

   29 expr: WHILE_T . expr DO_T expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 26
    lvalue  go to state 14


State 4

   30 expr: FOR_T . ID_T ASSIGN_T expr TO_T expr DO_T expr

    ID_T  shift, and go to state 27


State 5

   31 expr: BREAK_T .

    $default  reduce using rule 31 (expr)


State 6

    5 expr: NIL_T .

    $default  reduce using rule 5 (expr)


State 7

    2 expr: MINUS_T . expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 28
    lvalue  go to state 14


State 8

    3 expr: NUM_T .

    $default  reduce using rule 3 (expr)


State 9

   20 expr: ID_T . '(' exprlist ')'
   21     | ID_T . '(' ')'
   24     | ID_T . '{' fieldlist '}'
   25     | ID_T . '{' '}'
   26     | ID_T . '[' expr ']' OF_T expr
   36 lvalue: ID_T .
   37       | ID_T . '[' expr ']'

    '('  shift, and go to state 29
    '['  shift, and go to state 30
    '{'  shift, and go to state 31

    $default  reduce using rule 36 (lvalue)


State 10

    4 expr: STRING_T .

    $default  reduce using rule 4 (expr)


State 11

   22 expr: '(' . exprseq ')'
   23     | '(' . ')'

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11
    ')'       shift, and go to state 32

    expr     go to state 33
    lvalue   go to state 14
    exprseq  go to state 34


State 12

    0 $accept: program . $end

    $end  shift, and go to state 35


State 13

    1 program: expr .
    7 expr: expr . TIMES_T expr
    8     | expr . DIV_T expr
    9     | expr . PLUS_T expr
   10     | expr . MINUS_T expr
   11     | expr . OR_T expr
   12     | expr . AND_T expr
   13     | expr . EQ_T expr
   14     | expr . LT_T expr
   15     | expr . LE_T expr
   16     | expr . GT_T expr
   17     | expr . GE_T expr
   18     | expr . NEQ_T expr

    AND_T    shift, and go to state 36
    OR_T     shift, and go to state 37
    EQ_T     shift, and go to state 38
    GT_T     shift, and go to state 39
    GE_T     shift, and go to state 40
    LT_T     shift, and go to state 41
    LE_T     shift, and go to state 42
    NEQ_T    shift, and go to state 43
    DIV_T    shift, and go to state 44
    PLUS_T   shift, and go to state 45
    MINUS_T  shift, and go to state 46
    TIMES_T  shift, and go to state 47

    $default  reduce using rule 1 (program)


State 14

    6 expr: lvalue .
   19     | lvalue . ASSIGN_T expr
   34 lvalue: lvalue . '[' expr ']'
   35       | lvalue . DOT_T ID_T

    DOT_T     shift, and go to state 48
    ASSIGN_T  shift, and go to state 49
    '['       shift, and go to state 50

    $default  reduce using rule 6 (expr)


State 15

   58 variabledeclaration: VAR_T . ID_T ASSIGN_T expr
   59                    | VAR_T . ID_T COLON_T ID_T ASSIGN_T expr

    ID_T  shift, and go to state 51


State 16

   51 typedeclaration: TYPE_T . ID_T EQ_T type

    ID_T  shift, and go to state 52


State 17

   62 functiondeclaration: FUNC_T . ID_T '(' ')' EQ_T expr
   63                    | FUNC_T . ID_T '(' typefields ')' EQ_T expr
   64                    | FUNC_T . ID_T '(' ')' COLON_T ID_T EQ_T expr
   65                    | FUNC_T . ID_T '(' typefields ')' COLON_T ID_T EQ_T expr

    ID_T  shift, and go to state 53


State 18

   32 expr: LET_T declarationlist . IN_T END_T
   33     | LET_T declarationlist . IN_T exprseq END_T

    IN_T  shift, and go to state 54


State 19

   44 declarationlist: declaration .
   45                | declaration . declarationlist

    VAR_T   shift, and go to state 15
    TYPE_T  shift, and go to state 16
    FUNC_T  shift, and go to state 17

    $default  reduce using rule 44 (declarationlist)

    declarationlist      go to state 55
    declaration          go to state 19
    typedeclist          go to state 20
    typedeclaration      go to state 21
    variabledeclaration  go to state 22
    functiondeclist      go to state 23
    functiondeclaration  go to state 24


State 20

   46 declaration: typedeclist .

    $default  reduce using rule 46 (declaration)


State 21

   49 typedeclist: typedeclaration .
   50            | typedeclaration . typedeclist

    TYPE_T  shift, and go to state 16

    TYPE_T    [reduce using rule 49 (typedeclist)]
    $default  reduce using rule 49 (typedeclist)

    typedeclist      go to state 56
    typedeclaration  go to state 21


State 22

   47 declaration: variabledeclaration .

    $default  reduce using rule 47 (declaration)


State 23

   48 declaration: functiondeclist .

    $default  reduce using rule 48 (declaration)


State 24

   60 functiondeclist: functiondeclaration .
   61                | functiondeclaration . functiondeclist

    FUNC_T  shift, and go to state 17

    FUNC_T    [reduce using rule 60 (functiondeclist)]
    $default  reduce using rule 60 (functiondeclist)

    functiondeclist      go to state 57
    functiondeclaration  go to state 24


State 25

    7 expr: expr . TIMES_T expr
    8     | expr . DIV_T expr
    9     | expr . PLUS_T expr
   10     | expr . MINUS_T expr
   11     | expr . OR_T expr
   12     | expr . AND_T expr
   13     | expr . EQ_T expr
   14     | expr . LT_T expr
   15     | expr . LE_T expr
   16     | expr . GT_T expr
   17     | expr . GE_T expr
   18     | expr . NEQ_T expr
   27     | IF_T expr . THEN_T expr
   28     | IF_T expr . THEN_T expr ELSE_T expr

    THEN_T   shift, and go to state 58
    AND_T    shift, and go to state 36
    OR_T     shift, and go to state 37
    EQ_T     shift, and go to state 38
    GT_T     shift, and go to state 39
    GE_T     shift, and go to state 40
    LT_T     shift, and go to state 41
    LE_T     shift, and go to state 42
    NEQ_T    shift, and go to state 43
    DIV_T    shift, and go to state 44
    PLUS_T   shift, and go to state 45
    MINUS_T  shift, and go to state 46
    TIMES_T  shift, and go to state 47


State 26

    7 expr: expr . TIMES_T expr
    8     | expr . DIV_T expr
    9     | expr . PLUS_T expr
   10     | expr . MINUS_T expr
   11     | expr . OR_T expr
   12     | expr . AND_T expr
   13     | expr . EQ_T expr
   14     | expr . LT_T expr
   15     | expr . LE_T expr
   16     | expr . GT_T expr
   17     | expr . GE_T expr
   18     | expr . NEQ_T expr
   29     | WHILE_T expr . DO_T expr

    DO_T     shift, and go to state 59
    AND_T    shift, and go to state 36
    OR_T     shift, and go to state 37
    EQ_T     shift, and go to state 38
    GT_T     shift, and go to state 39
    GE_T     shift, and go to state 40
    LT_T     shift, and go to state 41
    LE_T     shift, and go to state 42
    NEQ_T    shift, and go to state 43
    DIV_T    shift, and go to state 44
    PLUS_T   shift, and go to state 45
    MINUS_T  shift, and go to state 46
    TIMES_T  shift, and go to state 47


State 27

   30 expr: FOR_T ID_T . ASSIGN_T expr TO_T expr DO_T expr

    ASSIGN_T  shift, and go to state 60


State 28

    2 expr: MINUS_T expr .
    7     | expr . TIMES_T expr
    8     | expr . DIV_T expr
    9     | expr . PLUS_T expr
   10     | expr . MINUS_T expr
   11     | expr . OR_T expr
   12     | expr . AND_T expr
   13     | expr . EQ_T expr
   14     | expr . LT_T expr
   15     | expr . LE_T expr
   16     | expr . GT_T expr
   17     | expr . GE_T expr
   18     | expr . NEQ_T expr

    DIV_T    shift, and go to state 44
    TIMES_T  shift, and go to state 47

    $default  reduce using rule 2 (expr)


State 29

   20 expr: ID_T '(' . exprlist ')'
   21     | ID_T '(' . ')'

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11
    ')'       shift, and go to state 61

    expr      go to state 62
    lvalue    go to state 14
    exprlist  go to state 63


State 30

   26 expr: ID_T '[' . expr ']' OF_T expr
   37 lvalue: ID_T '[' . expr ']'

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 64
    lvalue  go to state 14


State 31

   24 expr: ID_T '{' . fieldlist '}'
   25     | ID_T '{' . '}'

    ID_T  shift, and go to state 65
    '}'   shift, and go to state 66

    fieldlist  go to state 67


State 32

   23 expr: '(' ')' .

    $default  reduce using rule 23 (expr)


State 33

    7 expr: expr . TIMES_T expr
    8     | expr . DIV_T expr
    9     | expr . PLUS_T expr
   10     | expr . MINUS_T expr
   11     | expr . OR_T expr
   12     | expr . AND_T expr
   13     | expr . EQ_T expr
   14     | expr . LT_T expr
   15     | expr . LE_T expr
   16     | expr . GT_T expr
   17     | expr . GE_T expr
   18     | expr . NEQ_T expr
   40 exprseq: expr .
   41        | expr . ';' exprseq

    AND_T    shift, and go to state 36
    OR_T     shift, and go to state 37
    EQ_T     shift, and go to state 38
    GT_T     shift, and go to state 39
    GE_T     shift, and go to state 40
    LT_T     shift, and go to state 41
    LE_T     shift, and go to state 42
    NEQ_T    shift, and go to state 43
    DIV_T    shift, and go to state 44
    PLUS_T   shift, and go to state 45
    MINUS_T  shift, and go to state 46
    TIMES_T  shift, and go to state 47
    ';'      shift, and go to state 68

    $default  reduce using rule 40 (exprseq)


State 34

   22 expr: '(' exprseq . ')'

    ')'  shift, and go to state 69


State 35

    0 $accept: program $end .

    $default  accept


State 36

   12 expr: expr AND_T . expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 70
    lvalue  go to state 14


State 37

   11 expr: expr OR_T . expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 71
    lvalue  go to state 14


State 38

   13 expr: expr EQ_T . expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11

    expr    go to state 72
    lvalue  go to state 14


State 39

   16 expr: expr GT_T . expr

    LET_T     shift, and go to state 1
    IF_T      shift, and go to state 2
    WHILE_T   shift, and go to state 3
    FOR_T     shift, and go to state 4
    BREAK_T   shift, and go to state 5
    NIL_T     shift, and go to state 6
    MINUS_T   shift, and go to state 7
    NUM_T     shift, and go to state 8
    ID_T      shift, and go to state 9
    STRING_T  shift, and go to state 10
    '('       shift, and go to state 11
